--- a/member03.html
+++ b/member03.html
@@ -41,7 +41,7 @@
         <th>　　　　　　　　　　　</th><td>　　　　　　　　　　　　</td>
       </tr>
       <tr>
-        <th>ドライバー名：　　　　</th><td>　　　　　　　　　　　　</td>
+        <th>ドライバー名：　　　　</th><td>Chikato　　　　　　　　</td>
       </tr>
       <tr>
         <th>生年月日：　　　　　　</th><td>1998年11月9日　　　　　</td>
@@ -53,7 +53,7 @@
         <th>過去のスポーツ経験：　</th><td>水泳　　　　　　　　　　</td>
       </tr>
       <tr>
-        <th>：　　　　　　　　　　</th><td>　　　　　　　　　　　　</td>
+        <th>趣味：　　　　　　　　</th><td>異文化交流　　　　　　　</td>
       </tr>
     </table>
 
