--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <div class="gaiyou">
       <a>
         <span class="fa fa-database"></span>
-        <h2>楽しみながら運動</h2>
-        <p>初心者でものんびりと<br>始められます。</p>
+        <h2>ロードバイクのつながり</h2>
+        <p>共通の趣味によって<br>ずっと繋がっていたい。</p>
       </a>
     </div>
 
@@ -78,4 +78,3 @@
 
   </body>
   </html>
-
