--- a/member.html
+++ b/member.html
@@ -13,7 +13,7 @@
 
   <nav class="menu">
     <ul>
-      <li><a href="index.html">TOP</a></li>
+      <li><a href="about.html">ABOUT</a></li>
       <li><a href="news.html">NEWS</a></li>
       <li><a href="member.html">MEMBER</a></li>
       <li><a href="contact.html">お問い合わせ</a></li>
