--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <li><a class="fa fa-twitter">
         <span class="sr-only">Twitter</span>
       </a></li>
-      <li><a class="fa fa-instagram">
+      <li><a href="https://www.instagram.com/sandaring_road" class="fa fa-instagram">
         <span class="sr-only">Instagram</span>
       </a></li>
     </ul>
