--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>SANDAring Road</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body class="top">
 
@@ -30,7 +31,7 @@
   <div class="pickup">
     <div class="gaiyou">
       <a>
-        <span class="fa fa-database"></span>
+        <span class="fa fa-bicycle"></span>
         <h2>ロードバイクのつながり</h2>
         <p>共通の趣味によって<br>ずっと繋がっていたい。</p>
       </a>
@@ -38,7 +39,7 @@
 
     <div class="gaiyou">
       <a>
-        <span class="fa fa-bar-chart-o"></span>
+        <span class="fa fa-user-plus"></span>
         <h2>ロード仲間を増やす</h2>
         <p>知らない人同士でも<br>気軽に一緒にライドします。</p>
       </a>
@@ -46,13 +47,13 @@
 
     <div class="gaiyou">
       <a>
-        <span class="fa fa-envelope"></span>
+        <span class="fa fa-user-circle"></span>
         <h2>週1ライド</h2>
         <p>休みの日を利用して<br>みんなでライドしに行きます。</p>
       </a>
     </div>
   </div>
-
+  
   <div class="news">
     <h2>お知らせ</h2>
     <ul>
