--- a/member.html
+++ b/member.html
@@ -16,7 +16,7 @@
       <li><a href="about.html">ABOUT</a></li>
       <li><a href="news.html">NEWS</a></li>
       <li><a href="member.html">MEMBER</a></li>
-      <li><a href="contact.html">お問い合わせ</a></li>
+      <li><a href="contact.html">CONTACT</a></li>
     </ul>
   </nav>
 
@@ -28,19 +28,19 @@
     <ul>
       <li>
         <a href="member01.html">
-          <img src="cannondale-sub.jpg"alt="">
+          <img src="cannondale-sub.jpg" alt="">
           <h1>Cannondale</h1>
         </a>
       </li>
       <li>
         <a href="member02.html">
-          <img src="derosa-sub.jpg"alt="">
+          <img src="derosa-sub.jpg" alt="">
           <h1>DE ROSA</h1>
         </a>
       </li>
       <li>
         <a href="member03.html">
-          <img src="specialized-sub.jpg"alt="">
+          <img src="specialized-sub.jpg" alt="">
           <h1>SPECIALIZED</h1>
         </a>
       </li>
@@ -51,20 +51,43 @@
     <ul>
       <li>
         <a href="member04.html">
-          <img src="pinarello-sub.jpg"alt="">
+          <img src="pinarello-sub.jpg" alt="">
           <h1>PINARELLO</h1>
         </a>
       </li>
       <li>
         <a href="member05.html">
-          <img src="merida-sub.jpg"alt="">
+          <img src="merida-sub.jpg" alt="">
           <h1>MERIDA</h1>
         </a>
       </li>
       <li>
         <a href="member06.html">
-          <img src="trek-sub.jpg"alt="">
+          <img src="trek-sub.jpg" alt="">
           <h1>TREK</h1>
+        </a>
+      </li>
+    </ul>
+  </article>
+
+  <article class="member-sub">
+    <ul>
+      <li>
+        <a href="member07.html">
+          <img src="bmc-sub.jpg" alt="">
+          <h1>BMC</h1>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="" alt="">
+          <h1></h1>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="" alt="">
+          <h1></h1>
         </a>
       </li>
     </ul>
