--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="about.html">ABOUT</a></li>
       <li><a href="news.html">NEWS</a></li>
       <li><a href="member.html">MEMBER</a></li>
-      <li><a href="contact.html">お問い合わせ</a></li>
+      <li><a href="contact.html">CONTACT</a></li>
     </ul>
   </nav>
 
